--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,7 +8,7 @@ CONFIG_ZMK_DISPLAY=n
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_MOUSE=y
 # Uncomment to increase bluetooth range.  It also uses more battery.
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="CorneMini"
 
 CONFIG_ZMK_STUDIO=yes
